[metadata]
name = digital_static
version = 0.2.0
description = static/snow simulation using python 3 and curses
long_description = README.md
long_description__content_type = text/markdown
url = https://github.com/tech-chad/digitalstatic
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires:
    importlib-metadata>=1.6
    argparse_types>=0.1.0
python_requires = >= 3.6.1

[options.packages.find]
exclude =
    tests*
    tests

[options.entry_points]
console_scripts =
    dstatic = dstatic.dstatic:main